[package]
name = "aci-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
rand = "0.8.5"

[dev-dependencies]
gif = "0.12.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "simulation"
harness = false