[package]
name = "aci-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
num_enum = "0.6.1"

[dev-dependencies]
gif = "0.12.0"
criterion = { version = "0.4", features = ["html_reports"] }
colorgrad = "0.6.2"
approx = "0.5.1"

[[bench]]
name = "simulation"
harness = false

[profile.bench]
opt-level = 3
debug = true
lto = true
