[package]
name = "aci-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
num_enum = "0.6.1"
glam = "0.24.0"
ordered-float = "3.7.0"
log = "0.4.17"
pathfinding = "4.3.0"
traitify = "0.1.0"

[dev-dependencies]
gif = "0.12.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
colorgrad = "0.6.2"
approx = "0.5.1"
env_logger = "0.10.0"
test-log = "0.2.11"

[[bench]]
name = "simulation"
harness = false

[profile.bench]
opt-level = 3
lto = true
debug = true
